...
                                            <outlet property="imgPoster" destination="qnM-K4-855" id="teZ-h2-uKH"/>
                                            <outlet property="lblReleased" destination="akl-cQ-hVs" id="bTh-4u-jWF"/>
                                        </connections>
                                    </collectionViewCell>
                                </cells>
                            </collectionView>
                            <searchBar contentMode="redraw" placeholder="Find you movie 🕵🏼‍♂️" translatesAutoresizingMaskIntoConstraints="NO" id="Vhf-Am-J4J" customClass="CustomSearchBar" customModule="MovieTouch" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
                                <color key="barTintColor" red="0.13243550060000001" green="0.1460205913" blue="0.3458123803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
                                <scopeButtonTitles>
                                    <string>Title</string>
                                    <string>Title</string>
...
                            <constraint firstItem="3iA-5K-lao" firstAttribute="trailing" secondItem="481-2H-Auf" secondAttribute="trailing" id="SgJ-j6-bmI"/>
                            <constraint firstItem="Vhf-Am-J4J" firstAttribute="top" secondItem="481-2H-Auf" secondAttribute="top" id="VDM-5n-3dZ"/>
                            <constraint firstItem="3iA-5K-lao" firstAttribute="leading" secondItem="481-2H-Auf" secondAttribute="leading" id="q1h-iO-KUo"/>
                            <constraint firstItem="Vhf-Am-J4J" firstAttribute="leading" secondItem="481-2H-Auf" secondAttribute="leading" id="uBV-1I-Zac"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Upcoming" id="XQH-vw-gvA"/>
                    <connections>
                        <outlet property="collectionView" destination="3iA-5K-lao" id="Knc-4i-R0j"/>
                        <outlet property="searchBar" destination="Vhf-Am-J4J" id="ZN1-nY-YHC"/>
                        <segue destination="BcM-7I-uU2" kind="show" identifier="showDetails" id="Ldy-k5-Eqa"/>
                    </connections>
                </viewController>
...
                            <constraint firstItem="5EY-Pu-Uke" firstAttribute="trailing" secondItem="QeI-Vw-jIE" secondAttribute="trailing" id="Bvd-Ib-Eq4"/>
                            <constraint firstItem="QeI-Vw-jIE" firstAttribute="leading" secondItem="5EY-Pu-Uke" secondAttribute="leading" id="GJh-01-2Cd"/>
                            <constraint firstItem="QeI-Vw-jIE" firstAttribute="top" secondItem="5EY-Pu-Uke" secondAttribute="top" id="b87-ic-4Wz"/>
                            <constraint firstItem="QeI-Vw-jIE" firstAttribute="bottom" secondItem="5EY-Pu-Uke" secondAttribute="bottom" id="s6e-Fp-H6W"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Movie Details" id="Mxk-DG-S6r"/>
                    <connections>
                        <outlet property="imgPoster" destination="kjq-kS-krz" id="kWP-Wa-NPt"/>
                        <outlet property="imgPosterHeightConstraint" destination="xZM-gM-vDN" id="1Dk-vY-oEZ"/>
                        <outlet property="imgPosterWidthContraint" destination="zHu-1o-lYQ" id="9Ic-jb-FD4"/>
                        <outlet property="lblGenre" destination="b39-kK-9VN" id="JWU-vj-lhg"/>
                        <outlet property="lblMovieName" destination="mwL-t8-3jl" id="pVv-pC-Sya"/>
...
